--- a/app/main-page.html
+++ b/app/main-page.html
@@ -13,7 +13,10 @@
         <div class="header__center center"><a href="#" class="header__logo">omaze</a>
           <div class="nav">
             <button class="nav__btn">menu</button>
-            <div class="nav__list"><a href="#" class="nav__link">Nav</a></div>
+            <div class="nav__list">
+              <div class="nav__group"><a href="#" class="nav__link">Experiences</a><a href="#" class="nav__link">Charities</a><a href="#" class="nav__link">Blog</a></div>
+              <div class="nav__group"><a href="#" class="nav__link">Preferred Language</a><a href="#" class="nav__link">Log In</a><a href="#" class="nav__link">Sign Up</a></div>
+            </div>
           </div>
         </div>
       </header>
@@ -184,8 +187,15 @@
           </div>
           <div class="section">
             <div class="tabs">
+              <div class="tabs__nav"><a href="#" class="tabs__link is-active">
+                  <div class="tabs__link-icon"><i class="icon icon-about"></i></div>
+                  <div class="tabs__link-title">about</div></a><a href="#" class="tabs__link">
+                  <div class="tabs__link-icon"><i class="icon icon-shipping"></i></div>
+                  <div class="tabs__link-title">shipping</div></a><a href="#" class="tabs__link">
+                  <div class="tabs__link-icon"><i class="icon icon-faq"></i></div>
+                  <div class="tabs__link-title">faq</div></a></div>
               <div class="tabs__container">
-                <div class="tabs__item">
+                <div class="tabs__item is-active">
                   <div class="tabs__title">About This Item</div>
                   <div class="content">
                     <p>The design of this T-shirt is inspired by a video we created with Arnold Schwarzenegger to promote his “Blow Sh** Up” campaign. This campaign was launched to raise money for After-School All-Stars, whose amazing initiative is very close to Arnold’s heart.</p><img src="img/content.jpg" alt="">
@@ -266,8 +276,8 @@
         <div class="similar">
           <div class="similar__title">You May Also Like...</div>
           <div class="similar__list js-similar">
-            <div class="similar__item">
-              <div class="item">
+            <div class="similar__slide">
+              <div class="similar__item item">
                 <div class="item__wrap">
                   <div class="item__price">18$</div><img src="img/product.jpg" alt="" class="item__pic">
                   <div class="item__head">
@@ -292,8 +302,8 @@
                 </div>
               </div>
             </div>
-            <div class="similar__item">
-              <div class="item">
+            <div class="similar__slide">
+              <div class="similar__item item">
                 <div class="item__wrap">
                   <div class="item__price">18$</div><img src="img/product.jpg" alt="" class="item__pic">
                   <div class="item__head">
@@ -318,8 +328,60 @@
                 </div>
               </div>
             </div>
-            <div class="similar__item">
-              <div class="item">
+            <div class="similar__slide">
+              <div class="similar__item item">
+                <div class="item__wrap">
+                  <div class="item__price">18$</div><img src="img/product.jpg" alt="" class="item__pic">
+                  <div class="item__head">
+                    <div class="item__author">Robert Downey Jr.</div>
+                    <div class="item__title">Official Iron Man T-shirt</div>
+                  </div>
+                </div>
+                <div class="item__progress">
+                  <div class="item__progress-el">
+                    <div style="width: 60%;" class="item__progress-range"></div>
+                  </div>
+                  <div class="item__progress-wrap">
+                    <div class="item__progress-info">
+                      <div class="item__progress-val">65%</div>
+                      <div class="item__progress-type">funded</div>
+                    </div>
+                    <div class="item__progress-info">
+                      <div class="item__progress-val">18 days</div>
+                      <div class="item__progress-type">left</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="similar__slide">
+              <div class="similar__item item">
+                <div class="item__wrap">
+                  <div class="item__price">18$</div><img src="img/product.jpg" alt="" class="item__pic">
+                  <div class="item__head">
+                    <div class="item__author">Robert Downey Jr.</div>
+                    <div class="item__title">Official Iron Man T-shirt</div>
+                  </div>
+                </div>
+                <div class="item__progress">
+                  <div class="item__progress-el">
+                    <div style="width: 60%;" class="item__progress-range"></div>
+                  </div>
+                  <div class="item__progress-wrap">
+                    <div class="item__progress-info">
+                      <div class="item__progress-val">65%</div>
+                      <div class="item__progress-type">funded</div>
+                    </div>
+                    <div class="item__progress-info">
+                      <div class="item__progress-val">18 days</div>
+                      <div class="item__progress-type">left</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="similar__slide">
+              <div class="similar__item item">
                 <div class="item__wrap">
                   <div class="item__price">18$</div><img src="img/product.jpg" alt="" class="item__pic">
                   <div class="item__head">
