main page full version

--- a/app/main-page.html
+++ b/app/main-page.html
@@ -129,29 +129,79 @@
                   </div>
                 </div>
               </div>
-              <div class="product__foot"><a href="#" class="product__link link">Show sizing chart and product details</a>
-                <button class="product__btn btn">BUY IT NOW</button>
-                <div class="product__msg">Items ship 2 weeks after campaign closes</div>
+              <div class="sizes">
+                <div class="sizes__head"><a href="#" class="sizes__link link js-sizes-link">Show sizing chart and product details</a>
+                </div>
+                <div class="sizes__wrap js-sizes">
+                  <div class="sizes__list">
+                    <div class="sizes__product">Product Detail #1</div>
+                    <div class="sizes__product">Product Detail #2</div>
+                  </div>
+                  <table class="sizes__table">
+                    <thead>
+                      <tr>
+                        <th>Size</th>
+                        <th>Wifth</th>
+                        <th>Length</th>
+                        <th>Sleeve</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>S</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                      </tr>
+                      <tr>
+                        <td>M</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                      </tr>
+                      <tr>
+                        <td>L</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                      </tr>
+                      <tr>
+                        <td>XL</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                      </tr>
+                      <tr>
+                        <td>XXL</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                        <td>18.5”</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
+              <button class="product__btn btn">BUY IT NOW</button>
+              <div class="product__msg">Items ship 2 weeks after campaign closes</div>
             </div>
-            <div class="counter">
+            <div class="counter js-counter">
               <div class="counter__item">
-                <div class="counter__value">2</div>
+                <div class="counter__value js-counter-days">2</div>
                 <div class="counter__type">days</div>
               </div>
               <div class="counter__dots">:</div>
               <div class="counter__item">
-                <div class="counter__value">16</div>
+                <div class="counter__value js-counter-hours">16</div>
                 <div class="counter__type">hrs</div>
               </div>
               <div class="counter__dots">:</div>
               <div class="counter__item">
-                <div class="counter__value">24</div>
+                <div class="counter__value js-counter-mins">24</div>
                 <div class="counter__type">mins</div>
               </div>
               <div class="counter__dots">:</div>
               <div class="counter__item">
-                <div class="counter__value">15</div>
+                <div class="counter__value js-counter-secs">15</div>
                 <div class="counter__type">secs</div>
               </div>
             </div>
@@ -186,29 +236,103 @@
             </div>
           </div>
           <div class="section">
-            <div class="tabs">
-              <div class="tabs__nav"><a href="#" class="tabs__link is-active">
+            <div class="tabs js-tabs">
+              <div class="tabs__nav"><a href="#" class="tabs__link is-active js-tabs-link">
                   <div class="tabs__link-icon"><i class="icon icon-about"></i></div>
-                  <div class="tabs__link-title">about</div></a><a href="#" class="tabs__link">
+                  <div class="tabs__link-title">about</div></a><a href="#" class="tabs__link js-tabs-link">
                   <div class="tabs__link-icon"><i class="icon icon-shipping"></i></div>
-                  <div class="tabs__link-title">shipping</div></a><a href="#" class="tabs__link">
+                  <div class="tabs__link-title">shipping</div></a><a href="#" class="tabs__link js-tabs-link">
                   <div class="tabs__link-icon"><i class="icon icon-faq"></i></div>
                   <div class="tabs__link-title">faq</div></a></div>
               <div class="tabs__container">
-                <div class="tabs__item is-active">
+                <div class="tabs__item is-active js-tabs-item">
                   <div class="tabs__title">About This Item</div>
                   <div class="content">
                     <p>The design of this T-shirt is inspired by a video we created with Arnold Schwarzenegger to promote his “Blow Sh** Up” campaign. This campaign was launched to raise money for After-School All-Stars, whose amazing initiative is very close to Arnold’s heart.</p><img src="img/content.jpg" alt="">
                   </div>
                 </div>
-                <div class="tabs__item">
+                <div class="tabs__item js-tabs-item">
                   <div class="tabs__title">Shipping</div>
-                  <div class="shipping">
-                    <div class="shipping__nav"><a href="#" class="shipping__link is-active">United States</a><a href="#" class="shipping__link">Canada</a><a href="#" class="shipping__link">International</a></div>
+                  <div class="shipping js-shipping">
+                    <div class="shipping__nav"><a href="#" class="shipping__link is-active js-shipping-link">United States</a><a href="#" class="shipping__link js-shipping-link">Canada</a><a href="#" class="shipping__link js-shipping-link">International</a></div>
                     <div class="shipping__container">
-                      <div class="shipping__item">
+                      <div class="shipping__item is-active js-shipping-item">
                         <div class="content">
-                          <h4>Sample Header</h4>
+                          <h4>Sample Header 1</h4>
+                          <p>Once a campaign ends, we begin the printing process.  This takes about a week.  From there, all domestic orders take approximately one (1) week to ship. Your order will always arrive approximately two (2) weeks after the campaign has ended.</p>
+                          <table>
+                            <thead>
+                              <tr>
+                                <th>Style</th>
+                                <th>1st Item</th>
+                                <th>Each Add’l</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                      <div class="shipping__item js-shipping-item">
+                        <div class="content">
+                          <h4>Sample Header 2</h4>
+                          <p>Once a campaign ends, we begin the printing process.  This takes about a week.  From there, all domestic orders take approximately one (1) week to ship. Your order will always arrive approximately two (2) weeks after the campaign has ended.</p>
+                          <table>
+                            <thead>
+                              <tr>
+                                <th>Style</th>
+                                <th>1st Item</th>
+                                <th>Each Add’l</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                              <tr>
+                                <td>T-shirt</td>
+                                <td>$4.00</td>
+                                <td>$2.00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                      <div class="shipping__item js-shipping-item">
+                        <div class="content">
+                          <h4>Sample Header 3</h4>
                           <p>Once a campaign ends, we begin the printing process.  This takes about a week.  From there, all domestic orders take approximately one (1) week to ship. Your order will always arrive approximately two (2) weeks after the campaign has ended.</p>
                           <table>
                             <thead>
@@ -246,7 +370,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="tabs__item">
+                <div class="tabs__item js-tabs-item">
                   <div class="tabs__title">Frequently Asked Questions</div>
                   <div class="content">
                     <h6>Can I exchange or return my item?   </h6>
