--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div style="padding: 50px;" class="wrapper">
+      <div><a href="/icons.html" target="_blank">icons.html</a></div>
       <div><a href="/main-page.html" target="_blank">main-page.html</a></div>
+      <div><a href="/checkout.html" target="_blank">checkout.html</a></div>
     </div>
   </body>
 </html>
