--- a/app/main-page.html
+++ b/app/main-page.html
@@ -88,10 +88,10 @@
                     <div class="field__wrap">
                       <div class="select">
                         <div class="select__head">Men’s T-Shirt - $18</div>
-                        <select class="select__el">
+                        <select class="select__el js-select">
                           <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
+                          <option>Men’s T-Shirt - $19</option>
+                          <option>Men’s T-Shirt - $20</option>
                         </select>
                       </div>
                     </div>
@@ -254,7 +254,10 @@
                 <div class="tabs__item js-tabs-item">
                   <div class="tabs__title">Shipping</div>
                   <div class="shipping js-shipping">
-                    <div class="shipping__nav"><a href="#" class="shipping__link is-active js-shipping-link">United States</a><a href="#" class="shipping__link js-shipping-link">Canada</a><a href="#" class="shipping__link js-shipping-link">International</a></div>
+                    <div class="shipping__nav">
+                      <div class="shipping__nav-head js-shipping-head">United States</div>
+                      <div class="shipping__nav-list js-shipping-list"><a href="#" class="shipping__link is-active js-shipping-link">United States</a><a href="#" class="shipping__link js-shipping-link">Canada</a><a href="#" class="shipping__link js-shipping-link">International</a></div>
+                    </div>
                     <div class="shipping__container">
                       <div class="shipping__item is-active js-shipping-item">
                         <div class="content">
