--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
       <div><a href="/icons.html" target="_blank">icons.html</a></div>
       <div><a href="/main-page.html" target="_blank">main-page.html</a></div>
       <div><a href="/checkout.html" target="_blank">checkout.html</a></div>
+      <div><a href="/order.html" target="_blank">order.html</a></div>
     </div>
   </body>
 </html>
