--- a/app/main-page.html
+++ b/app/main-page.html
@@ -137,48 +137,7 @@
                     <div class="sizes__product">Product Detail #1</div>
                     <div class="sizes__product">Product Detail #2</div>
                   </div>
-                  <table class="sizes__table">
-                    <thead>
-                      <tr>
-                        <th>Size</th>
-                        <th>Wifth</th>
-                        <th>Length</th>
-                        <th>Sleeve</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>S</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                      </tr>
-                      <tr>
-                        <td>M</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                      </tr>
-                      <tr>
-                        <td>L</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                      </tr>
-                      <tr>
-                        <td>XL</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                      </tr>
-                      <tr>
-                        <td>XXL</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                        <td>18.5”</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <div class="sizes__table"><img src="img/sizes.jpg" alt="" class="sizes__table-pic"></div>
                 </div>
               </div>
               <button class="product__btn btn">BUY IT NOW</button>
