--- a/app/order.html
+++ b/app/order.html
@@ -13,57 +13,6 @@
         <div class="popup__center center">
           <div class="popup__in">
             <button class="popup__close">x</button>
-            <div class="popup__section">
-              <div class="form">
-                <div class="form__title">ORDER SUMMARY:</div>
-                <div class="form__fieldset form__fieldset_row">
-                  <div class="form__field field">
-                    <div class="field__label">Style:</div>
-                    <div class="field__wrap">
-                      <div class="select">
-                        <div class="select__head">Men’s T-Shirt - $18</div>
-                        <select class="select__el js-select">
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form__field field">
-                    <div class="field__label">Size:</div>
-                    <div class="field__wrap">
-                      <div class="select">
-                        <div class="select__head">Large</div>
-                        <select class="select__el js-select">
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form__field field">
-                    <div class="field__label">Color:</div>
-                    <div class="field__wrap">
-                      <div class="select">
-                        <div class="select__head">Heather Grey</div>
-                        <select class="select__el js-select">
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form__foot">
-                  <button disabled class="form__btn btn">CONFIRM ORDER</button>
-                  <button class="form__btn btn">PAY $36 + $4 SHIPPING</button>
-                  <button class="form__btn btn btn_white">PAY WITH<img src="img/pay-systems/paypal.svg" alt="" class="btn__paypal"></button>
-                </div>
-              </div>
-            </div>
             <div class="popup__aside">
               <div class="back"><a href="#" class="back__link"><i class="icon icon-arrow-back"></i><span class="back__title">Back to campaign</span></a></div>
               <div class="order">
@@ -76,6 +25,58 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="popup__section">
+              <div class="form">
+                <div class="form__fieldset form__fieldset_row">
+                  <div class="form__field field field_style">
+                    <div class="field__label">Style:</div>
+                    <div class="field__wrap">
+                      <div class="select">
+                        <div class="select__head">Men’s T-Shirt - $18</div>
+                        <select class="select__el js-select">
+                          <option>Men’s T-Shirt - $18</option>
+                          <option>Men’s T-Shirt - $18</option>
+                          <option>Men’s T-Shirt - $18</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form__option option">
+                    <div class="option__title">COLOR<span class="option__selected">- Heather Grey</span></div>
+                    <div class="option__list">
+                      <label class="option__item">
+                        <input type="radio" name="opt1" checked class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                      </label>
+                      <label class="option__item">
+                        <input type="radio" name="opt1" class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="form__option option">
+                    <div class="option__title">size<span class="option__selected">- Large</span></div>
+                    <div class="option__list">
+                      <label class="option__item">
+                        <input type="radio" name="opt2" checked class="option__input"><span class="option__var"> <span class="option__size">S</span></span>
+                      </label>
+                      <label class="option__item">
+                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
+                      </label>
+                      <label class="option__item">
+                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
+                      </label>
+                      <label class="option__item">
+                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
+                      </label>
+                      <label class="option__item">
+                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="order">
                 <div class="order__stats">
                   <div class="order__stats-value">$3.00</div>
                   <div class="order__stats-title">Subtotal:</div>
@@ -87,6 +88,13 @@
                 <div class="order__stats order__stats_total">
                   <div class="order__stats-value">$43.00</div>
                   <div class="order__stats-title">TOTAL:</div>
+                </div>
+              </div>
+              <div class="form">
+                <div class="form__foot">
+                  <button class="form__btn btn">PAY WITH CARD</button>
+                  <div class="form__or">- or -</div>
+                  <button class="form__btn btn btn_white">PAY WITH<img src="img/pay-systems/paypal.svg" alt="" class="btn__paypal"></button>
                 </div>
               </div>
             </div>
