--- a/app/checkout.html
+++ b/app/checkout.html
@@ -104,15 +104,14 @@
                   <div class="form__card card">
                     <div class="card__wrap js-card-wrap">
                       <div class="card__preview js-card-preview">
-                        <div class="card__preview-front">
-                        </div>
+                        <div class="card__preview-front"><img src="img/pay-systems/visa.svg" alt="" class="card__preview-pic js-card-item js-card-visa"><img src="img/pay-systems/mastercard.svg" alt="" class="card__preview-pic js-card-item js-card-mastercard"><img src="img/pay-systems/amex.svg" alt="" class="card__preview-pic js-card-item js-card-amex"><img src="img/pay-systems/discover.svg" alt="" class="card__preview-pic js-card-item js-card-discover"></div>
                         <div class="card__preview-back"><img src="img/card-cvv.svg" alt="" class="card__preview-pic"></div>
                       </div>
                       <div class="card__number card__number_full js-card-number-full">
                         <div class="card__field">
                           <div class="card__field-label">Credit Card #:</div>
                           <div class="card__field-wrap">
-                            <input type="text" placeholder="XXXX XXXX XXXX XXXX" class="card__input input js-card-number">
+                            <input type="text" class="card__input input js-card-number">
                           </div>
                         </div>
                       </div>
@@ -120,7 +119,7 @@
                         <div class="card__number card__number_short">
                           <div class="card__field">
                             <div class="card__field-wrap">
-                              <input type="text" readonly class="card__input input js-card-number-short">
+                              <input type="text" class="card__input input js-card-number-short">
                             </div>
                           </div>
                         </div>
@@ -128,7 +127,7 @@
                           <div class="card__field">
                             <div class="card__field-label">Expiration:</div>
                             <div class="card__field-wrap">
-                              <input type="text" placeholder="MM/YY" class="card__input input js-card-date">
+                              <input type="text" class="card__input input js-card-date">
                             </div>
                           </div>
                         </div>
@@ -136,7 +135,7 @@
                           <div class="card__field">
                             <div class="card__field-label">CVV:</div>
                             <div class="card__field-wrap">
-                              <input type="text" placeholder="CVV" class="card__input input js-card-cvv">
+                              <input type="text" class="card__input input js-card-cvv">
                             </div>
                           </div>
                         </div>
