--- a/app/order.html
+++ b/app/order.html
@@ -54,7 +54,7 @@
                       </label>
                     </div>
                   </div>
-                  <div class="form__option option">
+                  <div class="form__option form__option_lg option">
                     <div class="option__title">size<span class="option__selected">- Large</span></div>
                     <div class="option__list">
                       <label class="option__item">
@@ -76,7 +76,7 @@
                   </div>
                 </div>
               </div>
-              <div class="order">
+              <div class="order order_form">
                 <div class="order__stats">
                   <div class="order__stats-value">$3.00</div>
                   <div class="order__stats-title">Subtotal:</div>
@@ -92,9 +92,15 @@
               </div>
               <div class="form">
                 <div class="form__foot">
-                  <button class="form__btn btn">PAY WITH CARD</button>
-                  <div class="form__or">- or -</div>
-                  <button class="form__btn btn btn_white">PAY WITH<img src="img/pay-systems/paypal.svg" alt="" class="btn__paypal"></button>
+                  <div class="form__row">
+                    <div class="form__col">
+                      <button class="form__btn btn">PAY WITH CARD</button>
+                    </div>
+                    <div class="form__or">- or -</div>
+                    <div class="form__col">
+                      <button class="form__btn btn btn_white"><span class="btn__title">PAY WITH</span><img src="img/pay-systems/paypal.svg" alt="" class="btn__pic"></button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
