updated order page

--- a/app/checkout.html
+++ b/app/checkout.html
@@ -141,7 +141,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="card__edit"><a href="#" class="card__edit-link">Enter card number for expiration date and CVV</a></div>
+                    <div class="card__edit">Enter card number for expiration date and CVV</div>
                   </div>
                 </div>
                 <div class="form__foot">
@@ -156,20 +156,20 @@
                 <div class="order__title-sub">Benefiting After-School All-Stars</div>
                 <div class="order__list">
                   <div class="order__item">
-                    <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
                     <div class="order__info">
                       <div class="order__name">Men’s T-Shirt</div>
                       <div class="order__options">Heather Grey - L</div>
                       <div class="order__price">$18.00</div>
                     </div>
+                    <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
                   </div>
                   <div class="order__item">
-                    <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
                     <div class="order__info">
                       <div class="order__name">Men’s T-Shirt</div>
                       <div class="order__options">Heather Grey - L</div>
                       <div class="order__price">$18.00</div>
                     </div>
+                    <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
                   </div>
                 </div>
                 <div class="order__stats">
