--- a/app/order.html
+++ b/app/order.html
@@ -12,70 +12,138 @@
       <div class="popup__wrap">
         <div class="popup__center center">
           <div class="popup__in">
-            <button class="popup__close">x</button>
             <div class="popup__aside">
               <div class="back"><a href="#" class="back__link"><i class="icon icon-arrow-back"></i><span class="back__title">Back to campaign</span></a></div>
-              <div class="order">
-                <div class="order__list">
-                  <div class="order__item">
-                    <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
-                    <div class="order__info">
-                      <div class="order__name">Men’s T-Shirt</div>
-                      <div class="order__options">Heather Grey - L</div><a href="#" class="order__edit">tap to edit</a>
+            </div>
+            <div class="popup__row js-product">
+              <div class="popup__aside">
+                <div class="order order_single">
+                  <div class="order__list">
+                    <div class="order__item">
+                      <div class="order__info">
+                        <div class="order__name">Men’s T-Shirt</div>
+                        <div class="order__options">Heather Grey - L</div><a href="#" data-text-edit="tap to edit" data-text-close="close options" class="order__edit js-product-btn">tap to edit</a>
+                      </div>
+                      <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
+                      <button class="order__close">x</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="popup__section">
+                <div class="form form_change js-product-form">
+                  <button class="form__close">x</button>
+                  <div class="form__fieldset form__fieldset_row">
+                    <div class="form__field form__field_sm field field_style">
+                      <div class="field__label">Style:</div>
+                      <div class="field__wrap">
+                        <div class="select">
+                          <div class="select__head">Men’s T-Shirt - $18</div>
+                          <select class="select__el js-select">
+                            <option>Men’s T-Shirt - $18</option>
+                            <option>Men’s T-Shirt - $18</option>
+                            <option>Men’s T-Shirt - $18</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form__option form__option_sm option option_sm">
+                      <div class="option__title">COLOR<span class="option__selected">- Heather Grey</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt1" checked class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt1" class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="form__option form__option_md option option_sm">
+                      <div class="option__title">size<span class="option__selected">- Large</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt2" checked class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="popup__row js-product">
+              <div class="popup__aside">
+                <div class="order order_single">
+                  <div class="order__list">
+                    <div class="order__item">
+                      <div class="order__info">
+                        <div class="order__name">Men’s T-Shirt</div>
+                        <div class="order__options">Heather Grey - L</div><a href="#" data-text-edit="tap to edit" data-text-close="close options" class="order__edit js-product-btn">tap to edit</a>
+                      </div>
+                      <div class="order__preview"><img src="img/product.jpg" alt="" class="order__pic"></div>
+                      <button class="order__close">x</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="popup__section">
+                <div class="form form_change js-product-form">
+                  <button class="form__close">x</button>
+                  <div class="form__fieldset form__fieldset_row">
+                    <div class="form__field form__field_sm field field_style">
+                      <div class="field__label">Style:</div>
+                      <div class="field__wrap">
+                        <div class="select">
+                          <div class="select__head">Men’s T-Shirt - $18</div>
+                          <select class="select__el js-select">
+                            <option>Men’s T-Shirt - $18</option>
+                            <option>Men’s T-Shirt - $18</option>
+                            <option>Men’s T-Shirt - $18</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form__option form__option_sm option option_sm">
+                      <div class="option__title">COLOR<span class="option__selected">- Heather Grey</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt3" checked class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt3" class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="form__option form__option_md option option_sm">
+                      <div class="option__title">size<span class="option__selected">- Large</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt4" checked class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt4" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt4" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt4" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
+                        </label>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="popup__section">
-              <div class="form">
-                <div class="form__fieldset form__fieldset_row">
-                  <div class="form__field field field_style">
-                    <div class="field__label">Style:</div>
-                    <div class="field__wrap">
-                      <div class="select">
-                        <div class="select__head">Men’s T-Shirt - $18</div>
-                        <select class="select__el js-select">
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                          <option>Men’s T-Shirt - $18</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form__option option">
-                    <div class="option__title">COLOR<span class="option__selected">- Heather Grey</span></div>
-                    <div class="option__list">
-                      <label class="option__item">
-                        <input type="radio" name="opt1" checked class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
-                      </label>
-                      <label class="option__item">
-                        <input type="radio" name="opt1" class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
-                      </label>
-                    </div>
-                  </div>
-                  <div class="form__option form__option_lg option">
-                    <div class="option__title">size<span class="option__selected">- Large</span></div>
-                    <div class="option__list">
-                      <label class="option__item">
-                        <input type="radio" name="opt2" checked class="option__input"><span class="option__var"> <span class="option__size">S</span></span>
-                      </label>
-                      <label class="option__item">
-                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
-                      </label>
-                      <label class="option__item">
-                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
-                      </label>
-                      <label class="option__item">
-                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
-                      </label>
-                      <label class="option__item">
-                        <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
-                      </label>
-                    </div>
-                  </div>
-                </div>
-              </div>
               <div class="order order_form">
                 <div class="order__stats">
                   <div class="order__stats-value">$3.00</div>
@@ -100,6 +168,14 @@
                     <div class="form__col">
                       <button class="form__btn btn btn_white"><span class="btn__title">PAY WITH</span><img src="img/pay-systems/paypal.svg" alt="" class="btn__pic"></button>
                     </div>
+                  </div>
+                  <div class="secure">
+                    <div class="secure__wrap">
+                      <div class="secure__icon"><i class="icon icon-lock"></i></div>
+                      <div class="secure__title">Payments are secured with 128-bit encryption</div>
+                    </div>
+                    <div class="secure__text">By continuing, you agree to our</div>
+                    <div class="secure__terms"><a href="#" class="secure__terms-link">Purchaser Terms & Conditions</a></div>
                   </div>
                 </div>
               </div>
