added campaigns page

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
       <div><a href="/main-page.html" target="_blank">main-page.html</a></div>
       <div><a href="/checkout.html" target="_blank">checkout.html</a></div>
       <div><a href="/order.html" target="_blank">order.html</a></div>
+      <div><a href="/campaigns.html" target="_blank">campaigns.html</a></div>
     </div>
   </body>
 </html>
