--- a/app/checkout.html
+++ b/app/checkout.html
@@ -145,12 +145,27 @@
                   </div>
                 </div>
                 <div class="form__foot">
-                  <button disabled class="form__btn btn">CONFIRM ORDER</button>
-                  <button class="form__btn btn">PAY $36 + $4 SHIPPING</button>
+                  <div class="form__row form__row_invert">
+                    <div class="form__col">
+                      <button disabled class="form__btn btn">CONFIRM ORDER</button>
+                      <button class="form__btn btn">PAY $36 + $4 SHIPPING</button>
+                    </div>
+                    <div class="form__col"><a href="#" class="go-back">
+                        <div class="go-back__icon"><i class="icon icon-arrow-back-sm"></i></div>
+                        <div class="go-back__title">Edit Your Order</div></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="popup__aside">
+              <div class="campaign">
+                <div class="campaign__info">
+                  <div class="campaign__author">Arnold Schwarzenegger’s</div>
+                  <div class="campaign__title">Official Selfie Stick T-shirt</div>
+                  <div class="campaign__title-sub">Benefiting After-School All-Stars</div>
+                </div>
+              </div>
               <div class="order">
                 <div class="order__title">ORDER SUMMARY:</div>
                 <div class="order__title-sub">Benefiting After-School All-Stars</div>
