--- a/app/order.html
+++ b/app/order.html
@@ -12,10 +12,25 @@
       <div class="popup__wrap">
         <div class="popup__center center">
           <div class="popup__in">
-            <div class="popup__aside">
-              <div class="back"><a href="#" class="back__link"><i class="icon icon-arrow-back"></i><span class="back__title">Back to campaign</span></a></div>
+            <div class="popup__row">
+              <div class="popup__aside">
+                <div class="back"><a href="#" class="back__link"><i class="icon icon-arrow-back"></i><span class="back__title">Back to campaign</span></a></div>
+                <div class="campaign campaign_order">
+                  <div class="campaign__info">
+                    <div class="campaign__author">Arnold Schwarzenegger’s</div>
+                    <div class="campaign__title">Official Selfie Stick T-shirt</div>
+                    <div class="campaign__title-sub">Benefiting After-School All-Stars</div>
+                  </div>
+                </div>
+              </div>
+              <div class="popup__section">
+                <div class="back back_order"><a href="#" class="back__link"><i class="icon icon-arrow-back"></i><span class="back__title">Back to campaign</span></a></div>
+                <div class="form">
+                  <div class="form__title">ORDER SUMMARY:</div>
+                </div>
+              </div>
             </div>
-            <div class="popup__row js-product">
+            <div class="popup__row popup__row_product js-product">
               <div class="popup__aside">
                 <div class="order order_single">
                   <div class="order__list">
@@ -79,7 +94,7 @@
                 </div>
               </div>
             </div>
-            <div class="popup__row js-product">
+            <div class="popup__row popup__row_product js-product">
               <div class="popup__aside">
                 <div class="order order_single">
                   <div class="order__list">
@@ -144,6 +159,7 @@
               </div>
             </div>
             <div class="popup__section">
+              <div class="add-style"><a href="#" class="add-style__link">+ Add another style or color</a></div>
               <div class="order order_form">
                 <div class="order__stats">
                   <div class="order__stats-value">$3.00</div>
@@ -175,7 +191,7 @@
                       <div class="secure__title">Payments are secured with 128-bit encryption</div>
                     </div>
                     <div class="secure__text">By continuing, you agree to our</div>
-                    <div class="secure__terms"><a href="#" class="secure__terms-link">Purchaser Terms & Conditions</a></div>
+                    <div class="secure__terms">Purchaser Terms & Conditions</div>
                   </div>
                 </div>
               </div>
