--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
       <div><a href="/checkout.html" target="_blank">checkout.html</a></div>
       <div><a href="/order.html" target="_blank">order.html</a></div>
       <div><a href="/campaigns.html" target="_blank">campaigns.html</a></div>
+      <div><a href="/thank.html" target="_blank">thank.html</a></div>
     </div>
   </body>
 </html>
